confirm user account

--- a/app/views/user_mailer/confirm_account.html.erb
+++ b/app/views/user_mailer/confirm_account.html.erb
@@ -7,5 +7,5 @@
 </p>
 
 <p>
-	<a href="http://localhost:3000/confirm/<%= @user.token %>">Confirm your account</a>
+	<a href="<%= ENV["FRONTEND_URL"] %>/confirm/<%= @user.token %>">Confirm your account</a>
 </p>
